# Lab2Raytracer

./: .gitignore  CMakeLists.txt  README.md  TestModel.h  skeleton.cpp
